Added DB half baked db support